# folding

./: .pre-commit-config.yaml  .prettierignore  Makefile  README.md  gen.py  pyproject.toml  requirements.txt  scrape.sh
.github/workflows/: auto-merge.yml  scrape.yml
data/: donors-monthly.json  donors.json  teams-monthly.json  teams.json
data/donor/: andrew12.json  andrew12.txt
data/team/: 212997.json  212997.txt  236565.json  236565.txt  45032.json  45032.txt
donor/: andrew12.json
team/: 45032.json
