[tool.poetry]
name = "folding"
version = "0.1.0"
description = ""
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.14"
more-itertools = "^8.7.0"
pydantic = "^1.8.1"
tabulate = "^0.8.9"
pre-commit = "^2.10.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
